--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,6 +1,15 @@
-.products li{
+.products{
     display: flex;
     justify-content: center;
-    align-items: center;
-    gap: 5px;
+    flex-wrap: wrap;
+}
+
+.products li{
+    border: 1px solid white;
+    border-radius: 5px;
+    padding: 10px;
+    text-align: center;
+    list-style: none;
+    margin: 0 10px;
+    width: 25%;
 }
